# NishCorp-Tech

./: README.md
config/: urdf.rviz
wheelchair/: config.json
wheelchair/assets/: component1__2.stl  component24_1.part  component24_1__2.stl  fiberglass_seat_v3_v9.part  shaft_v2.part  tyre_v7.part  tyre_v7.stl
wheelchair_ros/: CMakeLists.txt  package.xml
wheelchair_ros/config/: wheelchair.yaml
wheelchair_ros/launch/: display.launch.py  wheelchair.launch.py  wheelchair_control.launch.py  wheelchair_gazebo.launch.py
wheelchair_ros/scripts/: joint_controller.py  joint_position_controller.py  motor_controller.py  teleop_controller.py
wheelchair_ros/wheelchair/: robot.urdf
wheelchair_ros/wheelchair/assets/: component1.part  component1.stl  component1__2.part  component24_1.stl  component24_1__2.part  fiberglass_seat_v3_v9.stl  fiberglass_seat_v3_v9__2.part  fiberglass_seat_v3_v9__2.stl  shaft_v2.stl  untitled_v1.part  untitled_v1.stl  zzzzzzz_v1.part
